# ndc-mongodb

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  DEVELOPING.md  Dockerfile.env-loader  LICENSE.txt  README.md  arion-compose.nix  arion-pkgs.nix  crate-hashes.json  deploy.sh  flake.nix  justfile  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/proptest-regressions/introspection/: type_unification.txt
crates/cli/proptest-regressions/native_query/: type_annotation.txt
crates/cli/src/: exit_codes.rs  introspection.rs  lib.rs  logging.rs  main.rs  tests.rs
crates/cli/src/introspection/: document.rs  inference.rs  local_document.rs  mod.rs  sampling.rs  type_unification.rs  validation_schema.rs
crates/cli/src/native_query/: aggregation-opeerator-progress.md  aggregation-operator-progress.md  aggregation_expression.rs  error.rs  helpers.rs  infer_result_type.rs  mod.rs  pipeline.rs  pipeline_type_context.rs  pretty_printing.rs  prune_object_types.rs  reference_shorthand.rs  tests.rs  type_annotation.rs  type_constraint.rs  type_solver.rs
crates/cli/src/native_query_builder/: infer_result_type.rs  mod.rs
crates/configuration/: Cargo.toml
crates/configuration-store/: Cargo.toml
crates/configuration-store/src/: configuration_mode.rs  lib.rs  postgres_store.rs
crates/configuration/src/: comparison_function.rs  configuration.rs  directory.rs  lib.rs  mongo_scalar_type.rs  native_mutation.rs  native_procedure.rs  native_queries.rs  native_query.rs  parameter.rs  read_directory.rs  with_name.rs
crates/configuration/src/metadata/: mod.rs
crates/configuration/src/schema/: database.rs  mod.rs
crates/configuration/src/serialized/: mod.rs  native_mutation.rs  native_procedure.rs  native_query.rs  schema.rs
crates/dc-api/: Cargo.toml
crates/dc-api-types/: Cargo.toml
crates/dc-api-types/src/: aggregate.rs  and_expression.rs  another_column_comparison.rs  apply_binary_array_comparison_operator.rs  apply_binary_comparison_operator.rs  apply_unary_comparison_operator.rs  array_comparison_value.rs  array_relation_insert_schema.rs  atomicity_support_level.rs  auto_increment_generation_strategy.rs  binary_array_comparison_operator.rs  binary_comparison_operator.rs  capabilities.rs  capabilities_response.rs  column_count_aggregate.rs  column_field.rs  column_info.rs  column_insert_schema.rs  column_nullability.rs  column_type.rs  column_value_generation_strategy.rs  comparison_capabilities.rs  comparison_column.rs  comparison_value.rs  config_schema_response.rs  constraint.rs  custom_update_column_operator_row_update.rs  data_schema_capabilities.rs  dataset_create_clone_request.rs  dataset_create_clone_response.rs  dataset_delete_clone_response.rs  dataset_get_template_response.rs  default_value_generation_strategy.rs  delete_mutation_operation.rs  error_response.rs  error_response_type.rs  exists_expression.rs  exists_in_table.rs  explain_response.rs  expression.rs  (+60 more)
crates/dc-api/src/: lib.rs
crates/dc-api/src/interface_types/: agent_error.rs  json_response.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: connector.rs  graphql.rs  lib.rs  validators.rs
crates/integration-tests/src/snapshots/: integration_tests__hello.snap  integration_tests__runs_a_query.snap
crates/integration-tests/src/tests/: aggregation.rs  basic.rs  expressions.rs  filtering.rs  grouping.rs  local_relationship.rs  mod.rs  native_mutation.rs  native_procedure.rs  native_query.rs  nested_collection.rs  permissions.rs  remote_relationship.rs  selection.rs  sorting.rs
crates/integration-tests/tests/: basic.rs  native_procedure.rs  native_query.rs  remote_relationship.rs
crates/integration-tests/tests/snapshots/: basic__runs_a_query.snap  native_procedure__updates_with_native_procedure.snap  native_query__runs_native_query_with_function_representation.snap  remote_relationship__provides_source_and_target_for_remote_relationship.snap
crates/introspection/: Cargo.toml
crates/introspection/proptest-regressions/: type_unification.txt
crates/introspection/src/: lib.rs  sampling.rs  test_helpers.rs  type_unification.rs  validation_schema.rs
crates/mongodb-agent-common/: Cargo.toml
crates/mongodb-agent-common/proptest-regressions/mongodb/: sanitize.txt
crates/mongodb-agent-common/proptest-regressions/query/: query_variable_name.txt
crates/mongodb-agent-common/src/: aggregation_function.rs  column_ref.rs  comparison_function.rs  constants.rs  explain.rs  health.rs  lib.rs  mongodb_connection.rs  scalar_types_capabilities.rs  schema.rs  state.rs  test_helpers.rs
crates/mongodb-agent-common/src/command/: command.rs  error.rs  mod.rs
crates/mongodb-agent-common/src/interface_types/: mod.rs  mongo_agent_error.rs  mongo_config.rs
crates/mongodb-agent-common/src/mongo_query_plan/: mod.rs
crates/mongodb-agent-common/src/mongodb/: accumulator.rs  collection.rs  database.rs  json_to_bson.rs  mod.rs  pipeline.rs  projection.rs  sanitize.rs  selection.rs  sort_document.rs  stage.rs  test_helpers.rs
crates/mongodb-agent-common/src/mutation/: error.rs  interpolated_command.rs  mod.rs
crates/mongodb-agent-common/src/procedure/: arguments_to_mongodb_expressions.rs  error.rs  interpolated_command.rs  mod.rs
crates/mongodb-agent-common/src/query/: aggregates.rs  arguments.rs  constants.rs  (+18 more)
crates/mongodb-agent-common/tests/: relational_integration_tests.rs
crates/mongodb-connector/: Cargo.toml
crates/mongodb-connector/src/: capabilities.rs  error_mapping.rs  functions.rs  lib.rs  main.rs  mongo_connector.rs  mutation.rs  query_context.rs  query_response.rs  schema.rs  state.rs  test_helpers.rs
crates/mongodb-support/: Cargo.toml
crates/mongodb-support/src/: align.rs  bson_type.rs  error.rs  extended_json_mode.rs  lib.rs
crates/ndc-query-plan/: Cargo.toml
crates/ndc-query-plan/src/: lib.rs  mutation_plan.rs  query_plan.rs  type_system.rs  vec_set.rs
crates/test-helpers/: Cargo.toml
crates/test-helpers/src/: arb_bson.rs  arb_plan_type.rs  arb_type.rs  configuration.rs  connector_configurations.rs  lib.rs
(+572 files in other folders)
