[workspace.package]
version = "1.7.1"

[workspace]
members = [
  "crates/cli",
  "crates/configuration",
  "crates/integration-tests",
  "crates/mongodb-agent-common",
  "crates/mongodb-connector",
  "crates/mongodb-support",
  "crates/ndc-query-plan",
  "crates/ndc-test-helpers",
  "crates/test-helpers",
]
resolver = "2"

# The tag or rev of ndc-models must match the locked tag or rev of the
# ndc-models dependency of ndc-sdk
[workspace.dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", tag = "v0.4.0" }
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.1.6" }

indexmap = { version = "2", features = [
  "serde",
] } # should match the version that ndc-models uses
itertools = "^0.12.1"
mongodb = { version = "^3.1.0", features = ["tracing-unstable"] }
schemars = "^0.8.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
ref-cast = "1.0.23"

# Set opt levels according to recommendations in insta documentation
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
