[package]
name = "mongodb-cli-plugin"
edition = "2021"
version.workspace = true

[features]
native-query-subcommand = []

[dependencies]
configuration = { path = "../configuration" }
mongodb-agent-common = { path = "../mongodb-agent-common" }
mongodb = { workspace = true }
mongodb-support = { path = "../mongodb-support" }

anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "env"] }
deriving_via = "^1.6.1"
futures-util = "0.3.28"
indexmap = { workspace = true }
itertools = { workspace = true }
ndc-models = { workspace = true }
nom = "^7.1.3"
nonempty = "^0.10.0"
ref-cast = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
test-helpers = { path = "../test-helpers" }
