[package]
name = "mongodb-cli-plugin"
edition = "2021"
version.workspace = true

[features]
default = ["native-query-subcommand"]
native-query-subcommand = ["dep:pretty", "dep:nom", "dep:textwrap"]

[dependencies]
configuration = { path = "../configuration" }
mongodb-agent-common = { path = "../mongodb-agent-common" }
mongodb = { workspace = true }
mongodb-support = { path = "../mongodb-support" }

anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "env"] }
enum-iterator = "^2.0.0"
futures-util = "0.3.28"
indexmap = { workspace = true }
itertools = { workspace = true }
ndc-models = { workspace = true }
nom = { version = "^7.1.3", optional = true }
nonempty = "^0.10.0"
pretty = { version = "^0.12.3", features = ["termcolor"], optional = true }
ref-cast = { workspace = true }
regex = "^1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }
textwrap = { version = "^0.16.1", optional = true }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
mongodb-agent-common = { path = "../mongodb-agent-common", features = ["test-helpers"] }

googletest = "^0.12.0"
pretty_assertions = "1"
proptest = "1"
test-helpers = { path = "../test-helpers" }
tmpdir = "^1.0.0"
