[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "^0.3"
itertools = { workspace = true }
mongodb = { workspace = true }
mongodb-support = { path = "../mongodb-support" }
ndc-models = { workspace = true }
schemars = "^0.8.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "^0.9"
tokio = "1"
tokio-stream = { version = "^0.1", features = ["fs"] }
