[package]
name = "configuration"
edition = "2021"
version.workspace = true

[dependencies]
mongodb-support = { path = "../mongodb-support" }
ndc-query-plan = { path = "../ndc-query-plan" }

anyhow = "1"
futures = "^0.3"
itertools = { workspace = true }
mongodb = { workspace = true }
ndc-models = { workspace = true }
ref-cast = { workspace = true }
schemars = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "^0.9"
tokio = "1"
tokio-stream = { version = "^0.1", features = ["fs"] }
