[package]
name = "configuration"
edition = "2021"
version.workspace = true

[dependencies]
mongodb-support = { path = "../mongodb-support" }
ndc-query-plan = { path = "../ndc-query-plan" }

anyhow = "1"
futures = "^0.3"
itertools = { workspace = true }
mongodb = { workspace = true }
ndc-models = { workspace = true }
ref-cast = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "^0.9"
tokio = "1"
tokio-stream = { version = "^0.1", features = ["fs"] }
tracing = "0.1"
