[package]
name = "dc-api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nonempty = { version = "0.8.1", features = ["serialize"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"

[dev-dependencies]
anyhow = "1"
mongodb = { workspace = true }
pretty_assertions = "1"
