[package]
name = "integration-tests"
edition = "2021"
version.workspace = true

[features]
integration = []

[dependencies]
ndc-models = { workspace = true }
ndc-test-helpers = { path = "../ndc-test-helpers" }

anyhow = "1"
assert_json = "^0.1"
insta = { version = "^1.38", features = ["yaml"] }
reqwest = { version = "^0.12.4", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "^1.37.0", features = ["full"] }
url = "^2.5.0"
