[package]
name = "introspection"
edition = "2021"
version.workspace = true

[features]
# When enabled this crate exports test helpers.
test_helpers = ["dep:enum-iterator", "dep:proptest"]

[dependencies]
configuration = { path = "../configuration" }
mongodb-agent-common = { path = "../mongodb-agent-common" }
mongodb-support = { path = "../mongodb-support" }

anyhow = "^1.0.80"
enum-iterator = { version = "^2.0.0", optional = true }
futures-util = "0.3.28"
indexmap = { version = "1", features = ["serde"] } # must match the version that ndc-client uses
itertools = "^0.12.1"
mongodb = "2.8"
proptest = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
thiserror = "1.0.57"
these = "2.0.0"

[dev-dependencies]
proptest = "1"
