[package]
name = "mongodb-agent-common"
description = "logic that is common to v2 and v3 agent versions"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../configuration" }
dc-api = { path = "../dc-api" }
dc-api-types = { path = "../dc-api-types" }
mongodb-support = { path = "../mongodb-support" }

anyhow = "1.0.71"
async-trait = "^0.1"
axum = { version = "0.6", features = ["headers"] }
bytes = "^1"
enum-iterator = "^2.0.0"
futures = "0.3.28"
futures-util = "0.3.28"
http = "^0.2"
indexmap = { version = "1", features = ["serde"] } # must match the version that ndc-client uses
indent = "^0.1"
itertools = { workspace = true }
mongodb = "2.8"
once_cell = "1"
regex = "1"
schemars = { version = "^0.8.12", features = ["smol_str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { version = "^3.7", features = ["base64", "hex"] }
thiserror = "1"
time = { version = "0.3.29", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"

[dev-dependencies]
dc-api-test-helpers = { path = "../dc-api-test-helpers" }
mongodb-cli-plugin = { path = "../cli" }
test-helpers = { path = "../test-helpers" }

mockall = "^0.12.1"
pretty_assertions = "1"
proptest = "1"
tokio = { version = "1", features = ["full"] }
