[package]
name = "mongodb-agent-common"
description = "logic that is common to v2 and v3 agent versions"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../configuration" }
mongodb-support = { path = "../mongodb-support" }
ndc-query-plan = { path = "../ndc-query-plan" }

anyhow = "1.0.71"
async-trait = "^0.1"
axum = { version = "0.6", features = ["headers"] }
bytes = "^1"
enum-iterator = "^2.0.0"
futures = "0.3.28"
futures-util = "0.3.28"
http = "^0.2"
indexmap = { workspace = true }
indent = "^0.1"
itertools = { workspace = true }
lazy_static = "^1.4.0"
mongodb = { workspace = true }
ndc-models = { workspace = true }
once_cell = "1"
regex = "1"
schemars = { version = "^0.8.12", features = ["smol_str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { version = "^3.7", features = ["base64", "hex"] }
thiserror = "1"
time = { version = "0.3.29", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"

[dev-dependencies]
mongodb-cli-plugin = { path = "../cli" }
ndc-test-helpers = { path = "../ndc-test-helpers" }
test-helpers = { path = "../test-helpers" }

mockall = "^0.12.1"
pretty_assertions = "1"
proptest = "1"
tokio = { version = "1", features = ["full"] }
