[package]
name = "mongodb-connector"
edition = "2021"
version.workspace = true

[dependencies]
configuration = { path = "../configuration" }
mongodb-agent-common = { path = "../mongodb-agent-common" }
mongodb-support = { path = "../mongodb-support" }
ndc-query-plan = { path = "../ndc-query-plan" }

anyhow = "1"
async-trait = "^0.1"
enum-iterator = "^2.0.0"
futures = "^0.3"
http = "^0.2"
indexmap = { workspace = true }
itertools = { workspace = true }
mongodb = { workspace = true }
ndc-sdk = { workspace = true }
prometheus = "*" # share version from ndc-sdk
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
ndc-test-helpers = { path = "../ndc-test-helpers" }
pretty_assertions = "1"
