[package]
name = "mongodb-support"
version = "0.1.0"
edition = "2021"

[dependencies]
dc-api-types = { path = "../dc-api-types" }
enum-iterator = "1.4.1"
indexmap = { version = "1", features = ["serde"] } # must match the version that ndc-client uses
mongodb = "2.8"
schemars = "^0.8.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
