[package]
name = "mongodb-support"
edition = "2021"
version.workspace = true

[dependencies]
enum-iterator = "^2.0.0"
indexmap = { workspace = true }
mongodb = { workspace = true }
schemars = "^0.8.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
