[package]
name = "ndc-query-plan"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2"
indexmap = { workspace = true }
itertools = { workspace = true }
ndc-models = { workspace = true }
nonempty = "^0.10"
serde_json = "1"
thiserror = "1"
ref-cast = { workspace = true }

[dev-dependencies]
ndc-test-helpers = { path = "../ndc-test-helpers" }

anyhow = "1"
enum-iterator = "2"
lazy_static = "1"
pretty_assertions = "1"
