[package]
name = "ndc-query-plan"
edition = "2021"
version.workspace = true

[dependencies]
derivative = "2"
indent = "^0.1"
indexmap = { workspace = true }
itertools = { workspace = true }
ndc-models = { workspace = true }
nonempty = "^0.10"
serde_json = { workspace = true }
thiserror = "1"
ref-cast = { workspace = true }

[dev-dependencies]
ndc-test-helpers = { path = "../ndc-test-helpers" }

anyhow = "1"
enum-iterator = "2"
lazy_static = "1"
pretty_assertions = "1"
