[package]
name = "test-helpers"
edition = "2021"
version.workspace = true

[dependencies]
configuration = { path = "../configuration" }
mongodb-support = { path = "../mongodb-support" }
ndc-test-helpers = { path = "../ndc-test-helpers" }

enum-iterator = "^2.0.0"
mongodb = { workspace = true }
ndc-models = { workspace = true }
proptest = "1"

